--- a/fplay.plugin.wirelessvisualizer/src/main/res/values-es/strings.xml
+++ b/fplay.plugin.wirelessvisualizer/src/main/res/values-es/strings.xml
@@ -13,16 +13,16 @@
     <string name="bt_stop">Detener la transmisión</string>
     <string name="bt_vumeter">VU meter + detección de BPM</string>
     <string name="bt_pairing">Por favor, intente conectarse de nuevo después de emparejar el dispositivo.</string>
-    <string name="bt_connection_error">Se ha producido un error al conectar con el dispositivo Bluetooth :(</string>
-    <string name="bt_communication_error">Se ha producido un error durante la comunicación con el dispositivo Bluetooth :(</string>
-    <string name="bt_needs_to_be_enabled">Necesitas habilitar Bluetooth para proceder :(</string>
-    <string name="bt_not_supported">Bluetooth no es compatible :(</string>
-    <string name="bt_discovery_error">Se ha producido un error al buscar los dispositivos Bluetooth :(</string>
+    <string name="bt_connection_error">Se ha producido un error al conectar con el dispositivo Bluetooth &#128546;</string>
+    <string name="bt_communication_error">Se ha producido un error durante la comunicación con el dispositivo Bluetooth &#128546;</string>
+    <string name="bt_needs_to_be_enabled">Necesitas habilitar Bluetooth para proceder &#128546;</string>
+    <string name="bt_not_supported">Bluetooth no es compatible &#128546;</string>
+    <string name="bt_discovery_error">Se ha producido un error al buscar los dispositivos Bluetooth &#128546;</string>
     <string name="bt_devices">Dispositivos Bluetooth</string>
     <string name="bt_connecting">Conectando con el dispositivo Bluetooth. Por favor, espera&#8230;</string>
     <string name="bt_scanning">Buscando dispositivos Bluetooth.&#8230;</string>
-    <string name="bt_not_paired">No hay dispositivos Bluetooth emparejados :(</string>
-    <string name="bt_not_found">No se han encontrado dispositivos Bluetooth :(</string>
+    <string name="bt_not_paired">No hay dispositivos Bluetooth emparejados &#128546;</string>
+    <string name="bt_not_found">No se han encontrado dispositivos Bluetooth &#128546;</string>
     <string name="bt_null_device_name">(Dispositivo BT)</string>
 
 </resources>
