--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_by">por Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Reproductor de música con una interfaz limpia, ecualizador, refuerzo de graves y colores personalizables</string>
-    <string name="app_more_info">Estás buscando más información acerca del programa?&lt;br/&gt;Codigo fuente?&lt;br/&gt;Tiene alguna peticion?&lt;br/&gt;Encontro algún bug?!?&lt;br/&gt;Quiere tener contacto conmigo? :)&lt;br/&gt;&lt;br/&gt;Mande un email:&lt;br/&gt;&lt;a href=\"mailto:dev@carlosrafaelgn.com.br\"&gt;dev@carlosrafaelgn.com.br&lt;/a&gt;&lt;br/&gt;o visite el proyecto de la aplicacion GitHub:&lt;br/&gt; &lt;a href=\"https://github.com/carlosrafaelgn/FPlayAndroid\"&gt;FPlayAndroid&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Un agradecimiento muy especial a las personas que ayudaron a traducir FPlay:</string>
+    <string name="app_more_info">Estás buscando más información acerca del programa?&lt;br/&gt;Codigo fuente?&lt;br/&gt;Tiene alguna peticion?&lt;br/&gt;Encontro algún bug?!?&lt;br/&gt;Quiere tener contacto conmigo? &#128516;&lt;br/&gt;&lt;br/&gt;Mande un email:&lt;br/&gt;&lt;a href=\"mailto:dev@carlosrafaelgn.com.br\"&gt;dev@carlosrafaelgn.com.br&lt;/a&gt;&lt;br/&gt;o visite el proyecto de la aplicacion GitHub:&lt;br/&gt; &lt;a href=\"https://github.com/carlosrafaelgn/FPlayAndroid\"&gt;FPlayAndroid&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Un agradecimiento muy especial a las personas que ayudaron a traducir FPlay:</string>
     <string name="app_more_info2">&lt;br/&gt;&lt;br/&gt;Muchas gracias!! :D&lt;br/&gt;&lt;br/&gt;La fuente utilizada para dislexia es OpenDyslexic Regular, por Abelardo Gonzalez, disponible en &lt;a href=\"http://dyslexicfonts.com\"&gt;dyslexicfonts.com&lt;/a&gt; and licenciado por &lt;a href=\"https://creativecommons.org/licenses/by/3.0/us/legalcode\"&gt;Creative Commons Attribution 3.0 Unported License&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;La fuente utilizada para utilizar iconos en el programa, icons.ttf, realizada con IcoMoon App, por Keyamoon, disponible en: &lt;a href=\"http://icomoon.io/app\"&gt;icomoon.io/app&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Algunos de los iconos fueron creados por mi, otros vinieron de lo conjunto IcoMoon Free, por Keyamoon, licenciado por &lt;a href=\"https://creativecommons.org/licenses/by/3.0/us/legalcode\"&gt;Creative Commons License 3.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;Las clases BgEdgeEffect, BitmapLruCache, FixedFFT y NonNull se basan en el código existente de The Android Open Source Project, licenciado por &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\"&gt;Apache License 2.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;Las clases Vector3, Matrix3x3, So3Util, OrientationEKF y HeadTracker se basan en el código existente de &lt;a href=\"https://github.com/googlesamples/cardboard-java\"&gt;Google Cardboard&lt;/a&gt; y &lt;a href=\"https://github.com/rsanchezsaez/cardboard-java\"&gt;github.com/rsanchezsaez/cardboard-java&lt;/a&gt;, licenciado por &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\"&gt;Apache License 2.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;FPlay es licenciado por los terminos de FreeBSD License.</string>
     <string name="system_info">Información del sistema</string>
     <string name="resolution">Resolución</string>
@@ -39,8 +39,8 @@
     <string name="msg_create_new">Crear nueva&#8230;</string>
     <string name="msg_add">Este boton añade a la lista de reproducción, todas las canciones en la carpeta incluyendo las subcarpetas.</string>
     <string name="msg_play">Este boton añade a la lista de reproducción, todas las canciones en la carpeta incluyendo las subcarpetas e inicia la reproducción.</string>
-    <string name="msg_error_download_path">No fue posible acceder a la carpeta de descarga :(</string>
-    <string name="msg_error_exporting_settings">Algo salió mal al exportar la configuración :(</string>
+    <string name="msg_error_download_path">No fue posible acceder a la carpeta de descarga &#128546;</string>
+    <string name="msg_error_exporting_settings">Algo salió mal al exportar la configuración &#128546;</string>
     <string name="opt_language">Idioma:</string>
     <string name="opt_use_alternate_typeface">Usar fuente amigable para dislexia</string>
     <string name="opt_auto_turn_off">Apagar automáticamente el reproductor después de:</string>
@@ -100,7 +100,7 @@
     <string name="item_list">lista</string>
     <string name="more">Más&#8230;</string>
     <string name="more_effects">Más efectos&#8230;</string>
-    <string name="visualizer_not_supported">Tu dispositivo no soporta la visualización :(</string>
+    <string name="visualizer_not_supported">Tu dispositivo no soporta la visualización &#128546;</string>
     <string name="audio_effects">Efectos de audio</string>
     <string name="zero_preset">Configuraciones en cero</string>
     <string name="load_preset">Abrir configuración</string>
@@ -159,20 +159,20 @@
     <string name="internal_storage">Almacenamiento Interno</string>
     <string name="external_storage">Almacenamiento Externo</string>
     <string name="usb_storage">Almacenamiento USB</string>
-    <string name="error_connection">No hay acceso a internet :(</string>
-    <string name="error_gen">Lo sentimos! Ha ocurrido un error :(</string>
-    <string name="error_playback">Lo sentimos! Ha ocurrido un error durante la reproducción :(</string>
+    <string name="error_connection">No hay acceso a internet &#128546;</string>
+    <string name="error_gen">Lo sentimos! Ha ocurrido un error &#128546;</string>
+    <string name="error_playback">Lo sentimos! Ha ocurrido un error durante la reproducción &#128546;</string>
     <string name="error_msg">Lo sentimos! Ha ocurrido un error durante la reproducción:</string>
-    <string name="error_state">Lo sentimos! La reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor :(</string>
-    <string name="error_io">Lo sentimos! La reproducción tuvo que ser interrumpida debido a que el reproductor ha tenido un fallo :(</string>
-    <string name="error_file_not_found">Lo sentimos! No fue posible encontrar el archivo :(</string>
-    <string name="error_server_not_found">Lo sentimos! No fue posible encontrar el servidor :(</string>
-    <string name="error_timeout">Lo sentimos! El tiempo de acceso ha expirado :(</string>
-    <string name="error_server_died">Lo sentimos! El servidor de medio ha muerto :(</string>
-    <string name="error_security">Lo sentimos! Ha ocurrido un problema de seguridad :(</string>
-    <string name="error_unsupported_format">Lo sentimos! Este códec de audio no es compatible :(</string>
-    <string name="error_try_smaller_buffer">Lo sentimos! Sin memoria! Intente reducir el tamaño del buffer de reproducción :(</string>
-    <string name="coming_soon">Próximamente&#8230; ;)</string>
+    <string name="error_state">Lo sentimos! La reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor &#128546;</string>
+    <string name="error_io">Lo sentimos! La reproducción tuvo que ser interrumpida debido a que el reproductor ha tenido un fallo &#128546;</string>
+    <string name="error_file_not_found">Lo sentimos! No fue posible encontrar el archivo &#128546;</string>
+    <string name="error_server_not_found">Lo sentimos! No fue posible encontrar el servidor &#128546;</string>
+    <string name="error_timeout">Lo sentimos! El tiempo de acceso ha expirado &#128546;</string>
+    <string name="error_server_died">Lo sentimos! El servidor de medio ha muerto &#128546;</string>
+    <string name="error_security">Lo sentimos! Ha ocurrido un problema de seguridad &#128546;</string>
+    <string name="error_unsupported_format">Lo sentimos! Este códec de audio no es compatible &#128546;</string>
+    <string name="error_try_smaller_buffer">Lo sentimos! Sin memoria! Intente reducir el tamaño del buffer de reproducción &#128546;</string>
+    <string name="coming_soon">Próximamente&#8230; &#128521;</string>
     <string name="blue_orange">Azul/Naranja</string>
     <string name="blue">Azul</string>
     <string name="green">Verde</string>
@@ -181,7 +181,7 @@
     <string name="dark_light">Oscuro/Claro</string>
     <string name="new_setting">Nueva configuración!</string>
     <string name="there_is_a_new_setting">Hay una nueva opción disponible en el menu \"Configuración\":</string>
-    <string name="check_it_out">Échale un vistazo :)</string>
+    <string name="check_it_out">Échale un vistazo &#128516;</string>
     <string name="color_theme">Tema de color</string>
     <string name="flat_details">Detalles en colores sólidos</string>
     <string name="widget">Widget</string>
@@ -190,7 +190,7 @@
     <string name="icon_color">Color de icono</string>
     <string name="apply_theme">Aplicar tema</string>
     <string name="hard_theme">El tema tiene por lo menos una combinación de colores (texto/fondo) difícil de leer&#8230; Aplicar el tema de todos modos?</string>
-    <string name="unreadable_theme">Lo sentimos, pero tu tema tiene al menos una combinación de colores (texto/fondo) ilegible :(</string>
+    <string name="unreadable_theme">Lo sentimos, pero tu tema tiene al menos una combinación de colores (texto/fondo) ilegible &#128546;</string>
     <string name="discard_theme">Realmente desea descartar los cambios realizados en el tema?</string>
     <string name="load_colors_from_current_theme">Cargar colores de tema actual</string>
     <string name="general">General</string>
@@ -218,11 +218,11 @@
     <string name="custom_color_theme">Tema de color personalizable</string>
     <string name="add_artist">Añadir artista</string>
     <string name="play_artist">Tocar artista</string>
-    <string name="effect_not_supported">Su dispositivo no suporta este efecto :(</string>
-    <string name="equalizer_not_supported">Su dispositivo no suporta ecualizador :(</string>
-    <string name="bass_boost_not_supported">Su dispositivo no suporta refuerzo de graves :(</string>
-    <string name="bass_boost_strength_not_supported">Su dispositivo no suporta ajuste fino de refuerzo de graves :(</string>
-    <string name="touch_to_add_songs">Lista vacía!\n\nToque aquí, o el botón &#9835;, para añadir canciones :)</string>
+    <string name="effect_not_supported">Su dispositivo no suporta este efecto &#128546;</string>
+    <string name="equalizer_not_supported">Su dispositivo no suporta ecualizador &#128546;</string>
+    <string name="bass_boost_not_supported">Su dispositivo no suporta refuerzo de graves &#128546;</string>
+    <string name="bass_boost_strength_not_supported">Su dispositivo no suporta ajuste fino de refuerzo de graves &#128546;</string>
+    <string name="touch_to_add_songs">Lista vacía!\n\nToque aquí, o el botón &#9835;, para añadir canciones &#128516;</string>
     <string name="custom_key_behavior">Comportamiento personalizable de las teclas</string>
     <string name="opt_wrap_around_list">Mueve la selección de teclado para el extremo opuesto de la lista al alcanzar la parte superior/inferior</string>
     <string name="opt_extra_spacing">Usar espacion largo en encabezados</string>
@@ -251,10 +251,10 @@
     <string name="genre">Género</string>
     <string name="search_term">Término de búsqueda</string>
     <string name="tags">Tags</string>
-    <string name="no_description">Ninguna descripción :(</string>
-    <string name="no_tags">Ninguna tag :(</string>
-    <string name="no_favorites">Aún no hay favoritas!\n\nMarque estaciones de radio como favoritas para que pueda encontrarlas aquí :)</string>
-    <string name="no_stations">Ninguna estación de radio ha sido encontrada :(\n\nToque aquí para ver sus estaciones de radio favoritas :)</string>
+    <string name="no_description">Ninguna descripción &#128546;</string>
+    <string name="no_tags">Ninguna tag &#128546;</string>
+    <string name="no_favorites">Aún no hay favoritas!\n\nMarque estaciones de radio como favoritas para que pueda encontrarlas aquí &#128516;</string>
+    <string name="no_stations">Ninguna estación de radio ha sido encontrada &#128546;\n\nToque aquí para ver sus estaciones de radio favoritas &#128516;</string>
     <string name="expand_seek_bar">Expandir la barra de búsqueda antes de buscar</string>
     <string name="provided_by">Ofrecido por</string>
     <string name="creamy">Cremoso</string>
@@ -282,7 +282,7 @@
     <string name="sustain">Sostener:</string>
     <string name="diffusion">Difusión</string>
     <string name="msg_immersive">&#8634; Mueve tu dispositivo alrededor (ten cuidado!)</string>
-    <string name="msg_no_sensors">Lo sentimos, pero el dispositivo no tiene los sensores necesarios :(</string>
+    <string name="msg_no_sensors">Lo sentimos, pero el dispositivo no tiene los sensores necesarios &#128546;</string>
     <string name="tutorial">Tutorial</string>
     <string name="information">Información</string>
 
@@ -298,16 +298,16 @@
     <string name="bt_stop">Detener la transmisión</string>
     <string name="bt_vumeter">VU meter + detección de BPM</string>
     <string name="bt_pairing">Por favor, intente conectarse de nuevo después de emparejar el dispositivo.</string>
-    <string name="bt_connection_error">Se ha producido un error al conectar con el dispositivo Bluetooth :(</string>
-    <string name="bt_communication_error">Se ha producido un error durante la comunicación con el dispositivo Bluetooth :(</string>
-    <string name="bt_needs_to_be_enabled">Necesitas habilitar Bluetooth para proceder :(</string>
-    <string name="bt_not_supported">Bluetooth no es compatible :(</string>
-    <string name="bt_discovery_error">Se ha producido un error al buscar los dispositivos Bluetooth :(</string>
+    <string name="bt_connection_error">Se ha producido un error al conectar con el dispositivo Bluetooth &#128546;</string>
+    <string name="bt_communication_error">Se ha producido un error durante la comunicación con el dispositivo Bluetooth &#128546;</string>
+    <string name="bt_needs_to_be_enabled">Necesitas habilitar Bluetooth para proceder &#128546;</string>
+    <string name="bt_not_supported">Bluetooth no es compatible &#128546;</string>
+    <string name="bt_discovery_error">Se ha producido un error al buscar los dispositivos Bluetooth &#128546;</string>
     <string name="bt_devices">Dispositivos Bluetooth</string>
     <string name="bt_connecting">Conectando con el dispositivo Bluetooth. Por favor, espera&#8230;</string>
     <string name="bt_scanning">Buscando dispositivos Bluetooth.&#8230;</string>
-    <string name="bt_not_paired">No hay dispositivos Bluetooth emparejados :(</string>
-    <string name="bt_not_found">No se han encontrado dispositivos Bluetooth :(</string>
+    <string name="bt_not_paired">No hay dispositivos Bluetooth emparejados &#128546;</string>
+    <string name="bt_not_found">No se han encontrado dispositivos Bluetooth &#128546;</string>
     <string name="bt_null_device_name">(Dispositivo BT)</string>
 
     <string name="loudspeaker">Altoparlante</string>
@@ -347,8 +347,8 @@
     <string name="previous_resets_after_the_beginning">Botón \"Anterior\" vuelve al comienzo de la canción antes de saltar a la pista anterior</string>
     <string name="larger_text_size">Tamaño de texto más grande</string>
     <string name="ringtone">Tono de llamada</string>
-    <string name="ringtone_error">Los tonos deben ser canciones en formato MP3 :(</string>
-    <string name="success">Éxito :)</string>
+    <string name="ringtone_error">Los tonos deben ser canciones en formato MP3 &#128546;</string>
+    <string name="success">Éxito &#128516;</string>
     <string name="display_song_number_and_count">Mostrar el número de la canción y la cantidad de canciones</string>
     <string name="show_album_art">Mostrar carátula del álbum</string>
     <string name="hide_album_art">Ocultar carátula del álbum</string>
